Thu Apr 06 02:56:09 BST 2006  Olly Betts <olly@survex.com>

	* mbox2omega.script: Use new "hash" command.

Wed Apr 05 19:29:14 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am,docs/scriptindex.txt,hashterm.cc,hashterm.h,
	  omindex.cc,scriptindex.cc: Add new "hash" command to allow hashed
	  terms to be generated from long URLs like omindex does.
	* htdig2omega.script: Use new "hash" command.
	* scriptindex.cc: Fix "useless weight" warning to not incorrectly
	  fire when "index" or "indexnopos" has no parameter.

Wed Apr 05 15:03:28 BST 2006  Olly Betts <olly@survex.com>

	* scriptindex.cc: Check if we successfully opened the index script
	  and give an error if not.

Fri Mar 10 05:21:13 GMT 2006  Olly Betts <olly@survex.com>

	* dbi2omega: Check DBIDRIVER environmental variable to allow a driver
	  other than mysql to be specified without modifying the script.

Wed Mar 01 02:28:57 GMT 2006  Olly Betts <olly@survex.com>

	* scriptindex.cc: Don't repeat the "note" part of warnings; Warn if
	  "unique=<prefix>" is used without a corresponding "boolean=<prefix>";
	  Warn that "index=nopos" is deprecated and should be replaced by
	  "indexnopos".

Tue Feb 28 23:46:57 GMT 2006  Olly Betts <olly@survex.com>

	* scriptindex.cc: Report a useless weight action, even if it's
	  followed by another non-useless action (e.g. field); convert weight
	  actions into a numeric parameter on index and indexnopos Action
	  objects; add explanatory text "(note that actions are executed from
	  left to right)" when reporting useless actions.

Sun Feb 26 00:25:10 GMT 2006  Olly Betts <olly@survex.com>

	* query.cc: Fix $opt[fieldnames] handling.  Previously it would try
	  to kick in if you didn't set fieldnames but set any alphabetically
	  later option!

Tue Feb 21 00:18:25 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac,NEWS: Updated for 0.9.4.

Sun Feb 19 23:20:49 GMT 2006  Olly Betts <olly@survex.com>

	* COPYING: Updated FSF address.
