@@ -1,3 +1,8 @@
+Thu Apr 06 03:06:56 BST 2006  Olly Betts <olly@survex.com>
+
+	* Makefile.am,commonhelp.cc,commonhelp.h,configure.ac,omindex.cc,
+	  scriptindex.cc: Add man pages for omindex and scriptindex.
+
 Thu Apr 06 02:56:09 BST 2006  Olly Betts <olly@survex.com>
 
 	* mbox2omega.script: Use new "hash" command.
